@@ -1,5 +1,10 @@
 Changes with Apache 1.3.1
 
+  *) Win32 (security): Eliminate directories consisting of three or more dots;
+     these are treated by Win32 as if they are ".." but are not detected by
+	 other machinery within Apache. This is something of a kludge but eliminates
+	 a security hole. [Ben Laurie]
+
   *) Move ap_escape_quotes() from src/ap to src/main/util.c; it uses
      pools and thus pollutes libap (until the pool stuff is moved there).
      [Ken Coar]
